--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -6,21 +6,60 @@
 display: none;
 }
 
-.table-body {
-  max-height: 400px; 
-  overflow-y: auto;
-  transition: scroll-behavior 0.5s ease;
+
+  @-webkit-keyframes marquee {
+      0% {
+        transform: translateY(100%);
+      }
+      100% {
+        transform: translateY(-100%);
+      }
+    }
+
+
+  @keyframes marquee {
+      0% {
+        transform: translateY(100%);
+      }
+      100% {
+        transform: translateY(-100%);
+      }
+    }
+
+.marquee-animation {
+      -webkit-animation: marquee 10s linear infinite;
+              animation: marquee 10s linear infinite;
+    }
+
+    @-webkit-keyframes announce {
+      0% {
+        transform: translateX(100%);
+      }
+      100% {
+        transform: translateX(-100%);
+      }
+    }
+
+
+  @keyframes announce {
+      0% {
+        transform: translateX(100%);
+      }
+      100% {
+        transform: translateX(-100%);
+      }
+    }
+
+    .announce-animation {
+      -webkit-announce: marquee 10s linear infinite;
+              announce: marquee 10s linear infinite;
+    }
+
+
+.fullScreenTable {
+  
 }
 
-.table-body::-webkit-scrollbar {
-  width: 12px;
-}
-
-.table-body::-webkit-scrollbar-thumb {
-  background-color: #888;
-  border-radius: 8px;
-}
-
-.table-body::-webkit-scrollbar-track {
-  background-color: #f1f1f1;
+.normalTable {
+  height: auto;
 }
