--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -7,10 +7,24 @@ display: none;
 }
 
 
-.fullScreenTable {
-  
-}
-
 .normalTable {
   height: auto;
+}
+
+.swiper {
+  width: 300px;
+  height: 300px;
+  padding: 50px;
+}
+
+.swiper-slide {
+  background-position: center;
+  background-size: cover;
+  width: 300px;
+  height: 300px;
+}
+
+.swiper-slide img {
+  display: block;
+  width: 100%;
 }
